# HOHOSOL_BOT

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
.github/workflows/: cd.yml  ci.yml
docs/: PROJECT_PLAYBOOK.md  REMOTE_ACCESS.md
samples/reports/: control-platform-overview.md  example-laravel-invoice-fix.md
samples/tasks/: laravel-invoice-pdf.json  laravel-route-bug.json  node-health-endpoint.json
scripts/launchagent/: com.hohosol.bot.plist  com.hohosolutions.devbot.plist
src/: cli.ts  index.ts
src/ai/: openAiCoach.ts
src/approvals/: approvalBus.ts
src/commands/: doctor.ts  initTemplates.ts  residentMode.ts  startBots.ts
src/config/: loadConfig.ts  runtimeConfig.ts
src/detect/: laravel.ts  node.ts  project.ts
src/execution/: agentPipeline.ts
src/fs/: async.ts
src/hohobot/: __init__.py  app.py  cli.py  config.py
src/hohobot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/logging/: taskLog.ts
src/memory/: taskMemory.ts
tasks/: laravel-invoice-pdf.json  laravel-route-bug.json  node-health-endpoint.json
tests/: allowlist.test.ts  ask-planner.test.ts  bootstrap-seed.test.ts  create-desktop-folder.test.ts  detect.test.ts  doctor.test.ts  init-templates.test.ts  notifications.test.ts  path-guard.test.ts  policy.test.ts  proposal.test.ts  sanitize-url.test.ts  telegram-assistant-chat.test.ts  telegram-help-messages.test.ts  telegram-keyboards.test.ts  telegram-parse.test.ts  telegram-ux.test.ts  test_calculator.py  workspace.test.ts
(+105 files in other folders)
